fixed colors and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ html {
 }
 
 body {
-  background-color: #008080;
+  background-color: #3BB9FF;
   color: #606468;
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
