--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #008080;
+    background-color: #3BB9FF;
     color: #606468;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
